# zmq_sample

client/: client  client.cpp  run
pub-sub/: CMakeLists.txt  build.sh
pub-sub/include/: zmq_publisher.h  zmq_subscriber.h
pub-sub/proto/: Person.pb.cc  Person.pb.h  Person.proto
pub-sub/src/: main.cpp  zmq_publisher.cpp  zmq_subscriber.cpp
server/: run  server  server.cpp
zmq_interactor/: CMakeLists.txt  build.sh
zmq_interactor/build_x86/: CMakeCache.txt  Makefile  cmake_install.cmake
zmq_interactor/build_x86/src/: Makefile  cmake_install.cmake
zmq_interactor/include/: mock_zmq_interactor.h  mock_zmq_publisher.h  mock_zmq_subscriber.h
zmq_interactor/src/: CMakeLists.txt  main.cpp  mock_zmq_interactor.cpp  mock_zmq_publiser.cpp  mock_zmq_subscriber.cpp
